tests/baselines/reference/duplicateExportAssignments.errors.txt
==== tests/cases/conformance/externalModules/foo1.ts (3 errors) ====
    var x = 10;
    var y = 20;
    export = x;
    ~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    export = y;
    ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    
==== tests/cases/conformance/externalModules/foo2.ts (2 errors) ====
    var x = 10;
    class y {};
    export = x;
    ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    export = y;
    ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    
==== tests/cases/conformance/externalModules/foo3.ts (2 errors) ====
    module x {
    	export var x = 10;
    }
    class y {
    	y: number;
    }
    export = x;
    ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    export = y;
    ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    
==== tests/cases/conformance/externalModules/foo4.ts (2 errors) ====
    export = x;
    ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    function x(){
    	return 42;
    }
    function y(){
    	return 42;
    }
    export = y;
    ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    
==== tests/cases/conformance/externalModules/foo5.ts (3 errors) ====
    var x = 5;
    var y = "test";
    var z = {};
    export = x;
    ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    export = y;
    ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    export = z;
    ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    